--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="text_black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="ripple_light">#e2e2e2</color>
 </resources>
