--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">kanji-database.sourceforge.net</domain>
+        <domain includeSubdomains="true">archive.wul.waseda.ac.jp</domain>
     </domain-config>
 </network-security-config>
