--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="text_black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="ripple_light">#e2e2e2</color>
+    <color name="text_gray">#666666</color>
 </resources>
