Update radical of the word while update word

--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -15,12 +15,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             app:imageUrl="@{image.imgUrl}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="w,1:1.5"/>
+            app:layout_constraintDimensionRatio="w,1:1"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
