--- a/app/src/main/res/layout/word_detail_fragment.xml
+++ b/app/src/main/res/layout/word_detail_fragment.xml
@@ -43,19 +43,33 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"/>
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_marginTop="16dp"
                 app:visibleGone="@{!word.oldWord.isEmpty}">
 
                 <ImageView
+                    android:id="@+id/img_old"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
-                    app:imageUrl="@{word.oldImgUrl}"/>
+                    app:imageUrl="@{word.oldImgUrl}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{word.oldWord, default=OldWord}"
+                    android:textSize="18sp"
+                    android:textColor="@color/text_black"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintTop_toTopOf="@id/img_old"
+                    app:layout_constraintStart_toEndOf="@id/img_old"
+                    app:layout_constraintBottom_toBottomOf="@id/img_old"/>
 
                 <LinearLayout
                     android:id="@+id/ll_old_word_notes"
@@ -63,8 +77,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="16dp"/>
-            </LinearLayout>
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/img_old"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
 </layout>
