--- a/app/src/main/res/layout/book_image_activity.xml
+++ b/app/src/main/res/layout/book_image_activity.xml
@@ -25,5 +25,6 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/bg_photo"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
