--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="ripple_light">#e2e2e2</color>
     <color name="text_gray">#666666</color>
+    <color name="bg_photo">#4E4E4E</color>
 </resources>
