Update to show book images in view page

--- a/app/src/main/res/layout/book_image_activity.xml
+++ b/app/src/main/res/layout/book_image_activity.xml
@@ -21,10 +21,9 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <uk.co.senab.photoview.PhotoView
-        android:id="@+id/image"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg_photo"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
