--- a/app/src/main/res/layout/word_detail_fragment.xml
+++ b/app/src/main/res/layout/word_detail_fragment.xml
@@ -15,13 +15,29 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                app:imageUrl="@{word.imgUrl}"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    app:imageUrl="@{word.imgUrl}"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{word.pinyin, default=Pinyin}"
+                    android:textSize="18sp"
+                    android:textColor="@color/text_black"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"/>
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
