--- a/app/src/main/res/layout/word_edit_activity.xml
+++ b/app/src/main/res/layout/word_edit_activity.xml
@@ -55,14 +55,31 @@
                     android:textColor="@color/text_black"
                     android:hint="@string/hint_word"
                     android:inputType="text"
-                    android:layout_marginLeft="16dp"
+                    app:layout_constraintEnd_toStartOf="@+id/edit_pinyin"
+                    app:layout_constraintStart_toEndOf="@+id/img"
                     android:layout_marginStart="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintStart_toEndOf="@id/img"
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintTop_toTopOf="@+id/img"
+                    app:layout_constraintBottom_toBottomOf="@+id/img"
+                    app:layout_constraintHorizontal_chainStyle="spread"/>
+
+                <EditText
+                    android:id="@+id/edit_pinyin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{word.pinyin, default=Pinyin}"
+                    android:textSize="18sp"
+                    android:textColor="@color/text_black"
+                    android:hint="@string/hint_pinyin"
+                    android:inputType="text"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/img"
-                    app:layout_constraintBottom_toBottomOf="@id/img"/>
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/edit_word"
+                    app:layout_constraintTop_toTopOf="@+id/edit_word"
+                    app:layout_constraintStart_toEndOf="@+id/edit_word"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"/>
 
                 <EditText
                     android:id="@+id/edit_content"
