--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -38,6 +38,18 @@
             app:layout_constraintStart_toEndOf="@id/img"/>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{item.pinyin, default=Pinyin}"
+            android:textSize="18sp"
+            android:textColor="@color/text_black"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_name"/>
+
+        <TextView
             android:id="@+id/tv_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
