--- a/app/src/main/res/layout/book_image_fragment.xml
+++ b/app/src/main/res/layout/book_image_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
     </data>
-    <ImageView
+    <uk.co.senab.photoview.PhotoView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
